--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -24,7 +24,7 @@
         <ul class="site-footer__links ul--onecolumn site-footer__links_lg">
           <li></li>        
           <li><h1>BMG INDUSTRIES INC.</h1></li>
-          <li>Unit A - 7492 Conway Ave Burnaby BC V5E 2P8</li>
+          <li>8063 North Fraser Way, Burnaby BC V5J 5M8</li>
           <li>PHONE: 1-800-964-2029 | FAX: 1-888-983-3006</li>
           <li>EMAIL: SALES@BMGIND.COM</li>  
         </ul>
